[gd_scene load_steps=10 format=3 uid="uid://dtgskxntmd0nq"]

[ext_resource type="Script" path="res://scripts/MultiPlayground.gd" id="1_m4pyh"]
[ext_resource type="PackedScene" uid="uid://burh8oloo8j3i" path="res://scenes/multiplayer_player.tscn" id="2_2l6ji"]
[ext_resource type="Script" path="res://scripts/MultiplayerHUD.gd" id="3_it2o2"]
[ext_resource type="Texture2D" uid="uid://cmaqge41y7fdx" path="res://assets/images/elements/air.png" id="4_3b4m3"]
[ext_resource type="Texture2D" uid="uid://c5ej0d8p7s7bg" path="res://assets/images/elements/earth.png" id="5_ax4uq"]
[ext_resource type="Texture2D" uid="uid://cfcbkjgd1dtmf" path="res://assets/images/elements/fire.png" id="6_htpc8"]
[ext_resource type="Texture2D" uid="uid://bwlyoq7o83n43" path="res://assets/images/elements/water.png" id="7_pdrv7"]
[ext_resource type="Script" path="res://scripts/PauseButton.gd" id="8_gmff3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1ycn"]
size = Vector2(50.6862, 20.5537)

[node name="Arena" type="Node2D"]
script = ExtResource("1_m4pyh")
playerScene = ExtResource("2_2l6ji")

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1000.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.59795, 0.892334)
color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_it2o2")

[node name="Player1Id" type="Label" parent="HUD"]
offset_left = 412.0
offset_top = 39.0
offset_right = 452.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "asd"

[node name="Player2Id" type="Label" parent="HUD"]
offset_left = 1079.0
offset_top = 833.0
offset_right = 1119.0
offset_bottom = 859.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "asd"

[node name="Player1ScoreLabel" type="Label" parent="HUD"]
offset_left = 73.0
offset_top = 19.0
offset_right = 153.0
offset_bottom = 45.0
scale = Vector2(2.59639, 2.59639)
theme_override_colors/font_color = Color(0, 0, 0.968627, 1)
text = "0"

[node name="Player2ScoreLabel" type="Label" parent="HUD"]
offset_left = 1454.0
offset_top = 813.0
offset_right = 1534.0
offset_bottom = 839.0
scale = Vector2(2.3898, 2.3898)
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.682353, 0, 0, 1)
text = "0"

[node name="Player3ScoreLabel" type="Label" parent="HUD"]
offset_left = 90.0
offset_top = 814.0
offset_right = 170.0
offset_bottom = 840.0
scale = Vector2(2.59639, 2.59639)
theme_override_colors/font_color = Color(0, 0, 0.968627, 1)
text = "0"

[node name="Player4ScoreLabel" type="Label" parent="HUD"]
offset_left = 1468.0
offset_top = 24.0
offset_right = 1548.0
offset_bottom = 50.0
scale = Vector2(2.59639, 2.59639)
theme_override_colors/font_color = Color(0, 0, 0.968627, 1)
text = "0"

[node name="Player1Cooldown" type="TextureProgressBar" parent="HUD"]
offset_left = 130.0
offset_top = 16.0
offset_right = 170.0
offset_bottom = 56.0
scale = Vector2(1.67148, 1.67148)
max_value = 6.0
step = 0.01
value = 6.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("4_3b4m3")
texture_progress = ExtResource("4_3b4m3")
tint_progress = Color(0.741176, 0.164706, 0.0156863, 1)

[node name="Player2Cooldown" type="TextureProgressBar" parent="HUD"]
offset_left = 1354.0
offset_top = 810.0
offset_right = 1482.0
offset_bottom = 938.0
scale = Vector2(0.520361, 0.520361)
size_flags_horizontal = 3
max_value = 6.0
step = 0.1
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("5_ax4uq")
texture_progress = ExtResource("5_ax4uq")
tint_progress = Color(0.968627, 0.176471, 0.0627451, 1)

[node name="Player3Cooldown" type="TextureProgressBar" parent="HUD"]
offset_left = 149.0
offset_top = 809.0
offset_right = 189.0
offset_bottom = 849.0
scale = Vector2(1.67148, 1.67148)
max_value = 6.0
step = 0.01
value = 6.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("6_htpc8")
texture_progress = ExtResource("6_htpc8")
tint_progress = Color(0.741176, 0.164706, 0.0156863, 1)

[node name="Player4Cooldown" type="TextureProgressBar" parent="HUD"]
offset_left = 1356.0
offset_top = 21.0
offset_right = 1396.0
offset_bottom = 61.0
scale = Vector2(1.67148, 1.67148)
max_value = 6.0
step = 0.01
value = 6.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("7_pdrv7")
texture_progress = ExtResource("7_pdrv7")
tint_progress = Color(0.741176, 0.164706, 0.0156863, 1)

[node name="ControlDetails1" type="Label" parent="HUD"]
light_mask = 16
visibility_layer = 16
z_index = 1
offset_left = 225.0
offset_top = 27.0
offset_right = 364.0
offset_bottom = 79.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left/Right:  A  /   D
Dash: W"

[node name="ControlDetails2" type="Label" parent="HUD"]
z_index = 1
offset_left = 1152.0
offset_top = 820.0
offset_right = 1326.0
offset_bottom = 872.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left/Right:  L/R Arrows
Hulk: Up Arrow"

[node name="ControlDetails3" type="Label" parent="HUD"]
z_index = 1
offset_left = 253.0
offset_top = 816.0
offset_right = 427.0
offset_bottom = 868.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left/Right: J / L
Dash: I"

[node name="ControlDetails4" type="Label" parent="HUD"]
z_index = 1
offset_left = 1101.0
offset_top = 25.0
offset_right = 1331.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left/Right:  KP 4 / KP 6 Arrows
Hulk: KP 8"

[node name="Title" type="Label" parent="HUD"]
offset_left = 705.0
offset_top = 2.0
offset_right = 906.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.341176, 0.270588, 1, 1)
theme_override_font_sizes/font_size = 66
text = "Pune+"

[node name="PauseButton" type="Button" parent="."]
visible = false
visibility_layer = 3
z_index = 5
offset_left = 670.0
offset_top = 379.0
offset_right = 678.0
offset_bottom = 387.0
theme_override_font_sizes/font_size = 66
text = "Unpause
 (Click)"
script = ExtResource("8_gmff3")

[node name="Colliders" type="Node2D" parent="."]

[node name="ColorRect" type="Area2D" parent="Colliders"]
scale = Vector2(39.9796, 3.65591)

[node name="Collider" type="CollisionShape2D" parent="Colliders/ColorRect"]
position = Vector2(19.9727, 13.4135)
scale = Vector2(0.790066, 1.23849)
shape = SubResource("RectangleShape2D_c1ycn")

[node name="ColorRect" type="ColorRect" parent="Colliders/ColorRect"]
light_mask = 4
visibility_layer = 4
offset_right = 40.0
offset_bottom = 27.0
color = Color(0.419608, 0.780392, 0.67451, 1)

[node name="ColorRect4" type="Area2D" parent="Colliders"]
position = Vector2(-1, 10)
scale = Vector2(0.0220082, 28.6583)

[node name="Collider" type="CollisionShape2D" parent="Colliders/ColorRect4"]
position = Vector2(19.9727, 13.4135)
scale = Vector2(0.790066, 1.23849)
shape = SubResource("RectangleShape2D_c1ycn")

[node name="ColorRect" type="ColorRect" parent="Colliders/ColorRect4"]
light_mask = 4
visibility_layer = 4
offset_right = 40.0
offset_bottom = 27.0
color = Color(1, 1, 0.254902, 1)

[node name="ColorRect5" type="Area2D" parent="Colliders"]
position = Vector2(1597, 26)
scale = Vector2(0.0220082, 28.6583)

[node name="Collider" type="CollisionShape2D" parent="Colliders/ColorRect5"]
position = Vector2(19.9727, 13.4135)
scale = Vector2(0.790066, 1.23849)
shape = SubResource("RectangleShape2D_c1ycn")

[node name="ColorRect" type="ColorRect" parent="Colliders/ColorRect5"]
light_mask = 4
visibility_layer = 4
offset_right = 40.0
offset_bottom = 27.0
color = Color(1, 1, 0.254902, 1)

[node name="ColorRect2" type="Area2D" parent="Colliders"]
position = Vector2(0, 800)
scale = Vector2(39.9841, 3.27972)

[node name="Collider" type="CollisionShape2D" parent="Colliders/ColorRect2"]
position = Vector2(19.9727, 13.4135)
scale = Vector2(0.790066, 1.23849)
shape = SubResource("RectangleShape2D_c1ycn")

[node name="ColorRect" type="ColorRect" parent="Colliders/ColorRect2"]
light_mask = 4
visibility_layer = 4
offset_right = 40.0
offset_bottom = 27.0
color = Color(0.419608, 0.780392, 0.67451, 1)

[node name="Node" type="Node" parent="."]

[node name="SpawnLocation" type="Node2D" parent="."]

[node name="0" type="Node2D" parent="SpawnLocation" groups=["PlayerSpawnPoint"]]
position = Vector2(200, 228)

[node name="1" type="Node2D" parent="SpawnLocation" groups=["PlayerSpawnPoint"]]
position = Vector2(1292, 652)

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
